# Test executable
set(LIRCH_CORE_TESTER_NAME "lirch-core-tester")
set(LIRCH_CORE_TESTER_PATH "${EXECUTABLE_OUTPUT_PATH}/${LIRCH_CORE_TESTER_NAME}")
include(${QT_USE_FILE})
include_directories(${QT_INCLUDE_DIR})
add_executable(${LIRCH_CORE_TESTER_NAME} test.cpp)
target_link_libraries(${LIRCH_CORE_TESTER_NAME} envelope pthread ${QT_LIBRARIES})

# Unit tests
add_test(sendToPlugin              "${LIRCH_CORE_TESTER_PATH}" toplugin)
add_test(sendToCore                "${LIRCH_CORE_TESTER_PATH}" tocore)
add_test(readEmptyMessage          "${LIRCH_CORE_TESTER_PATH}" readempty)
add_test(cycleMessage              "${LIRCH_CORE_TESTER_PATH}" cycle)
add_test(exhaustMessages           "${LIRCH_CORE_TESTER_PATH}" exhaust)
add_test(share1Pipe                "${LIRCH_CORE_TESTER_PATH}" sharing)
add_test(messageOrder              "${LIRCH_CORE_TESTER_PATH}" order)
add_test(multiPipe                 "${LIRCH_CORE_TESTER_PATH}" copying)
add_test(threadSequencing          "${LIRCH_CORE_TESTER_PATH}" threadseq)
add_test(immediateBlockingRead     "${LIRCH_CORE_TESTER_PATH}" 0bread)
add_test(threadedBlockingRead      "${LIRCH_CORE_TESTER_PATH}" 1bread)
add_test(doubleBlockingRead        "${LIRCH_CORE_TESTER_PATH}" 2bread)
add_test(sharedDoubleBlockingRead  "${LIRCH_CORE_TESTER_PATH}" shared2bread)
add_test(registration              "${LIRCH_CORE_TESTER_PATH}" register)
add_test(initializingRegistration  "${LIRCH_CORE_TESTER_PATH}" registryInitList)
add_test(registrationSize          "${LIRCH_CORE_TESTER_PATH}" registryEmpty)
add_test(registryDuplicateHandling "${LIRCH_CORE_TESTER_PATH}" registryDups)
add_test(parseEmptyString          "${LIRCH_CORE_TESTER_PATH}" parse1)
add_test(parseStringWithSpace      "${LIRCH_CORE_TESTER_PATH}" parse2)
add_test(parseSongLyrics           "${LIRCH_CORE_TESTER_PATH}" parse3)
add_test(parseSingleQuotes         "${LIRCH_CORE_TESTER_PATH}" parse4)
add_test(parseUnicode              "${LIRCH_CORE_TESTER_PATH}" parse5)
add_test(parseEscapes              "${LIRCH_CORE_TESTER_PATH}" parse6)
add_test(parseManySpaces           "${LIRCH_CORE_TESTER_PATH}" parse7)
add_test(parseDoubleQuotes         "${LIRCH_CORE_TESTER_PATH}" parse8)
add_test(parseEscapesInQuotes      "${LIRCH_CORE_TESTER_PATH}" parse9)
